# hawkeye

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini
app/: main.py
app/api/v1/: __init__.py
app/api/v1/endpoints/: alerts.py  auth.py  case_templates.py  cases.py  cortex.py  observables.py  organizations.py  tasks.py  users.py  users_enhanced.py
app/api/v1/schemas/: alerts.py  auth.py  case_templates.py  cases.py  cortex.py  observables.py  organizations.py  tasks.py  users.py
app/auth/: dependencies.py  security.py
app/core/: api_management.py  case_utils.py  config.py  pagination.py  tracing.py
app/db/: database.py  models.py  organizationmodel.py
app/db/crud/: __init__.py  alert.py  case.py  case_template.py  cortex.py  observable.py  organization.py  task.py  token.py  user.py
app/db/models/: __init__.py  alert.py  api_key.py  auth.py  base.py  case.py  case_template.py  cortex.py  enums.py  observable.py  organization.py  task.py  webhook.py
app/exceptions/: auth.py  handlers.py
app/integrations/: __init__.py  cortex_client.py  webhook_manager.py
app/middleware/: audit_middleware.py  compression.py  cors.py  monitoring.py  rate_limiting.py  security.py  tracing.py
app/utils/: helpers.py  validators.py
migrations/: env.py
scripts/: cleanup_tokens.py  create_admin_user.py  database_check.py
tests/: conftest.py  test_auth.py  test_enhanced_auth.py  test_organizations.py  test_security.py  test_users.py
